--- a/nclimgrid_processing.Rmd
+++ b/nclimgrid_processing.Rmd
@@ -33,6 +33,13 @@ library(rgeos)
 
 knitr::opts_chunk$set(echo = TRUE)
 ```
+# Intro
+
+The dataset, nClimGrid, is cited in NCA4. This dataset, the Gridded 5km GHCN-Daily Temperature and Precipitation Dataset, Version 1 (GHCN is NOAA’s Global Historical Climatology Network). The data is from the NOAA National Centers for Environmental Information (NCEI), and is described on the webpage, https://data.nodc.noaa.gov/cgi-bin/iso?id=gov.noaa.ncdc:C00332. 
+
+The citation is: Vose, Russell S., Applequist, Scott, Squires, Mike, Durre, Imke, Menne, Matthew J., Williams, Claude N. Jr., Fenimore, Chris, Gleason, Karin, and Arndt, Derek (2014): Gridded 5km GHCN-Daily Temperature and Precipitation Dataset (nCLIMGRID), Version 1. [indicate subset used]. NOAA National Centers for Environmental Information. DOI:10.7289/V5SX6B56 [access date].
+
+The ftp site for the nClimGrid data is ftp://ftp.ncdc.noaa.gov/pub/data/climgrid/. The data extends from 1895 to 2013 (then files with “preliminary” in the name up to current day). This is monthly data of total precipitation (mm), and mean, min and max temperature (deg C) for the CONUS at 5 km spatial resolution. 
 
 ## Don't want to lose these references:
 
@@ -43,11 +50,19 @@ https://www.earthdatascience.org/courses/earth-analytics/time-series-data/
 ```{r, echo=FALSE}
 # -----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------
-# Download and do preliminary processing
+# Preliminaries
 # -----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------
 
-# Download the file -----------------------------------------------------------
+# Read in Potomac watershed ---------------------------------------------------
+upper_pot_shp_file <- "input/gis/UpperPotWatershed_dd.shp"
+upper_pot_poly <- readShapePoly(upper_pot_shp_file)
+# summary(upper_pot_shp)
+# x -79.69099 -76.89138
+# y  37.87822  40.23735
+upper_pot_poly <- as(upper_pot_poly, "SpatialPolygons")
+
+# Download 1st nClimGrid file -------------------------------------------------
 nclimurl <- "ftp://ftp.ncdc.noaa.gov/pub/data/climgrid/"
 filename <- "nClimGrid_v1.0_monthly_189501_c20150401.tar.gz"
 nclimfile <- paste(nclimurl, filename, sep="")
@@ -60,38 +75,108 @@ untar(destfile, exdir = "data/nclimgrid_5km_v1.0/nclim189501/")
 # Read file and clip to rectangle ---------------------------------------------
 tmppath <- "data/nclimgrid_5km_v1.0/nclim189501/"
 tmpname <- "189501.prcp.conus.pnt"
-
 tmp_precip.df <- file.path(paste(tmppath, tmpname, sep="")) %>%
     data.table::fread(
       data.table = FALSE,
       header = FALSE,
       showProgress = FALSE, col.names = c("lat", "lon", "p_mm")) %>%
   filter(lat > 37.8 & lat < 40.3 & lon > -79.8 & lon < -76.8)
-# nclimgrid_coords <- tmp_precip.df %>%
-#   dplyr::select(lon, lat)
+
+# Create nClimGrid coordinates and pnts objects -------------------------------
 nclimgrid_coords <- cbind(tmp_precip.df$lon, tmp_precip.df$lat)
 nclimgrid_pnts <- SpatialPoints(coords = nclimgrid_coords)
-
-# Clip to upper Potomac watershed ---------------------------------------------
-upper_pot_shp_file <- "input/gis/UpperPotWatershed_dd.shp"
-upper_pot_poly <- readShapePoly(upper_pot_shp_file)
-# summary(upper_pot_shp)
-# x -79.69099 -76.89138
-# y  37.87822  40.23735
-upper_pot_poly <- as(upper_pot_poly, "SpatialPolygons")
 upper_pot_5km_pnts <- over(nclimgrid_pnts, upper_pot_poly)
 upper_pot_5km_pnts2 <- data.frame(nclimgrid_coords[!is.na(upper_pot_5km_pnts), ])
 names(upper_pot_5km_pnts2) <- c("lon", "lat")
-fin_precip.df <- left_join(upper_pot_5km_pnts2, tmp_precip.df, by = c("lon", "lat"))
 
-plot(upper_pot_shp)
-points(upper_pot_5km_pnts2)
+# Create empty df for upper Pot monthly means ---------------------------------
+upper_pot_monthly <- data.frame(year = integer(), month = integer(),
+                                prcp_mm = numeric(), tave_degC = numeric())
 
+# Delete *.tar.gz file --------------------------------------------------------
+unlink(paste("data/nclimgrid_5km_v1.0/", filename, sep=""))
+unlink("data/nclimgrid_5km_v1.0/nclim189501", recursive = TRUE)
 
+# plot(upper_pot_poly)
+# points(upper_pot_5km_pnts2)
 
 ```
 
-## Including Plots
+```{r}
+# -----------------------------------------------------------------------------
+# -----------------------------------------------------------------------------
+# Download and process all files
+# -----------------------------------------------------------------------------
+# -----------------------------------------------------------------------------
+for(iyear in 1895:1930) {
+  for(imonth in 1:12) {
+    cmonth <- c("01", "02", "03", "04", "05", "06", "07", "08", "09",
+                "10", "11", "12")
+    # Download nClimGrid file -------------------------------------------------
+    nclimurl <- "ftp://ftp.ncdc.noaa.gov/pub/data/climgrid/"
+    filename <- paste("nClimGrid_v1.0_monthly_", iyear, cmonth[imonth],
+                      "_c20150401.tar.gz", sep="")
+    nclimfile <- paste(nclimurl, filename, sep="")
+    destfile <- paste("data/nclimgrid_5km_v1.0/", filename, sep="")
+    download.file(nclimfile, destfile, method = "libcurl", 
+                  quiet = FALSE, mode = "wb")
+    
+    # Unzip the file ----------------------------------------------------------
+    newdir <- paste("data/nclimgrid_5km_v1.0/nclim", iyear, 
+                    cmonth[imonth], "/", sep="")
+    untar(destfile, exdir = newdir)
+    
+    # Read files ---------------------------------------------
+    # tmppath <- "data/nclimgrid_5km_v1.0/nclim189501/"
+
+    # prcp_fname <- "189501.prcp.conus.pnt"
+    prcp_fname <- paste(iyear, cmonth[imonth], 
+                        ".prcp.conus.pnt", sep="")
+    # tave_fname <- "189501.tave.conus.pnt"
+    tave_fname <- paste(iyear, cmonth[imonth], 
+                        ".tave.conus.pnt", sep="")
+    
+    tmp_prcp.df <- file.path(paste(newdir, prcp_fname, sep="")) %>%
+      data.table::fread(data.table = FALSE, header = FALSE,
+                        showProgress = FALSE, 
+                        col.names = c("lat", "lon", "p_mm")) %>%
+      filter(lat > 37.8 & lat < 40.3 & lon > -79.8 & lon < -76.8)
+    
+    tmp_tave.df <- file.path(paste(newdir, tave_fname, sep="")) %>%
+    data.table::fread(
+      data.table = FALSE,
+      header = FALSE,
+      showProgress = FALSE, col.names = c("lat", "lon", "tave_degC")) %>%
+      filter(lat > 37.8 & lat < 40.3 & lon > -79.8 & lon < -76.8)
+    
+    # Clip file data to upper Pot ---------------------------------------------
+    fin_prcp.df <- left_join(upper_pot_5km_pnts2, tmp_prcp.df, 
+                             by = c("lon", "lat"))
+    fin_tave.df <- left_join(upper_pot_5km_pnts2, tmp_tave.df, 
+                             by = c("lon", "lat"))
+    
+    # Compute upper Pot means -------------------------------------------------
+    upper_pot_prcp <- summarise(fin_prcp.df, mean(p_mm))
+    upper_pot_tave <- summarise(fin_tave.df, mean(tave_degC))
+    
+    # Add to upper_pot_monthly
+    newrow <- data.frame(year = iyear, month = imonth, 
+                         prcp_mm = fin_prcp.df[1, 3],
+                         tave_degC = fin_tave.df[1, 3])
+    upper_pot_monthly <- rbind(upper_pot_monthly, newrow)
+    
+    # Cleanup
+    unlink(paste("data/nclimgrid_5km_v1.0/", filename, sep=""))
+    newdir2 <- paste("data/nclimgrid_5km_v1.0/nclim", iyear, 
+                    cmonth[imonth], sep="")
+    unlink(newdir2, recursive = TRUE)
+  }
+}
+
+write_csv(upper_pot_monthly, "output/upper_pot_monthly.csv")
+```
+
+## 
 
 You can also embed plots, for example:
 
